Fixed header style (increased menu button and align), fixed link in footer

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
         padding-bottom: 45px;
         margin-bottom: -20px;
         background: lightgrey;
+        z-index: 0;
     }
 }
 
@@ -28,6 +29,7 @@
         padding-bottom: 25px;
         margin-bottom: -20px;
         background: lightgrey;
+        z-index: 0;
     }
 }
 
@@ -48,8 +50,9 @@
     {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         direction: rtl;
+        margin: 0 20px;
     }
 }
 
@@ -72,8 +75,7 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        margin-left: 10px;
-        margin-right: 10px;
+        margin: 0;
     }
 }
 
@@ -217,7 +219,7 @@ pre code.hljs
         padding-top: 45px;
         margin-top: -20px;
         background: lightgrey;
-        z-index: -1;
+        z-index: 0;
         position: relative;
     }
 }
@@ -235,7 +237,7 @@ pre code.hljs
         padding-top: 45px;
         margin-top: -20px;
         background: lightgrey;
-        z-index: -1;
+        z-index: 0;
         position: relative;
     }
 }
@@ -246,10 +248,9 @@ pre code.hljs
     {
         background-color: transparent;
         border: none;
-        font-size: 20px;
+        font-size: 26px;
         cursor: pointer;
-        margin-left: 10px;
-        margin-right: 10px;
+        margin: 0;
     }
 }
 
